--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jurong East Int Timings</title>
+  <title>(Opp) Jurong East Int/Lib Timings</title>
   <link rel="stylesheet" href="c.css">
 </head>
 <body>
   <table>
-    <tbody>
+    <thead>
+      Bus Interchange
+    </thead>
+    <tbody id="int">
+    </tbody>
+  </table>
+  <table>
+    <thead>
+      Opp Library
+    </thead>
+    <tbody id="lib">
     </tbody>
   </table>
   <script src="j.js" type="module"></script>
