--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <tbody id="lib">
     </tbody>
   </table>
-  <script src="j.js" type="module"></script>
+  <script src="./j.js" type="module"></script>
 </body>
 </html>
